--- a/WEB-INF/classes/en_US.properties
+++ b/WEB-INF/classes/en_US.properties
@@ -12,6 +12,8 @@ start_app_2=Module charging voice and push FTP
 start_app_3=Module charging data and diameter
 update_file_succes=Update configure file success!
 no_data=No data!
+alert_start_stop_app=You turned on app!
+alert_stop_start_app=You turned off app!
 #===========================================================
 app_assume_right=DIVIDEND ALL RIGHTS TO USERS
 update_per_for_users=Update permissions for users
@@ -152,6 +154,8 @@ cost_data_data_kb=Package of data(GB)
 tu_ngay_den_ngay=Fromdate must be smaller todate
 den_ngay_tu_ngay=Todate must be larger than fromdate
 need_to_check_info_again=Need to check info again
+cost_data_is_mobifone= Mobifone
+cost_data_mobifone_limit= Mobifone limit
 
 cost_sms_id=ID
 cost_sms_name=NAME
@@ -213,6 +217,7 @@ cost_voice_exp_free=FREE
 cost_voice_exp_note=NOTE
 cost_voice_exp_from_date=FROM_DATE
 cost_voice_exp_to_date=TO_DATE
+cost_voice_exp_company_id=ENTERPRISE
 
 #modify 18082017
 company_information_company_id=COMPANY_ID
