--- a/WEB-INF/classes/vi_VN.properties
+++ b/WEB-INF/classes/vi_VN.properties
@@ -12,6 +12,8 @@ start_app_2=Module tính cước voice và đẩy FTP
 start_app_3=Module tính cước data và diameter
 update_file_succes=Cập nhật cấu hình file thành công!
 no_data=Không có dữ liệu!
+alert_start_stop_app=Bạn đã bật ứng dụng!
+alert_stop_start_app=Bạn đã tắt ứng dụng!
 #===========================================================
 app_assume_right=PHÂN CÁC NHÓM QUYỀN CHO NGƯỜI DÙNG
 update_per_for_users=Cập nhật quyền cho người dùng
@@ -158,6 +160,10 @@ cost_sms_price=Giá
 cost_sms_note=Ghi chú
 cost_sms_from_date=Từ ngày
 cost_sms_to_date=Đến ngày
+cost_data_is_mobifone=Cước vượt ngưỡng
+cost_data_mobifone_limit=Phần trăm vượt ngưỡng
+cost_data_data_limit=Cước giới hạn
+cost_data_status=Trạng thái
 
 cost_sub_conference_id=ID
 cost_sub_conference_name=Tên
